// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`review 図形プリミティブ出力スナップショット (#43 PR-3 安全網) > detectWhiteWinningPattern (全空き点): 'mise-vcf-#18' 1`] = `
[
  {
    "col": 8,
    "row": 11,
    "type": "double-three",
  },
]
`;

exports[`review 図形プリミティブ出力スナップショット (#43 PR-3 安全網) > detectWhiteWinningPattern (全空き点): 'white29-m20' 1`] = `[]`;

exports[`review 図形プリミティブ出力スナップショット (#43 PR-3 安全網) > detectWhiteWinningPattern (全空き点): 'white29-m24' 1`] = `[]`;

exports[`review 図形プリミティブ出力スナップショット (#43 PR-3 安全網) > findWinningMove: 活四 1`] = `
{
  "black": {
    "col": 4,
    "row": 7,
  },
  "white": {
    "col": 4,
    "row": 7,
  },
}
`;

exports[`review 図形プリミティブ出力スナップショット (#43 PR-3 安全網) > getFourDefensePosition: 止め四・跳び四 1`] = `
{
  "closedFour": {
    "col": 9,
    "row": 7,
  },
  "jumpFour": {
    "col": 6,
    "row": 7,
  },
}
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > annotateFukumiMoves: 'mise-vcf-#18' 1`] = `[]`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > annotateFukumiMoves: 'white29-m20' 1`] = `
[
  {
    "fukumiDepth": null,
    "isFukumi": false,
    "position": {
      "col": 9,
      "row": 6,
    },
  },
  {
    "fukumiDepth": null,
    "isFukumi": false,
    "position": {
      "col": 9,
      "row": 7,
    },
  },
  {
    "fukumiDepth": 3,
    "isFukumi": true,
    "position": {
      "col": 10,
      "row": 7,
    },
  },
]
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > annotateFukumiMoves: 'white29-m24' 1`] = `
[
  {
    "fukumiDepth": null,
    "isFukumi": false,
    "position": {
      "col": 10,
      "row": 7,
    },
  },
  {
    "fukumiDepth": null,
    "isFukumi": false,
    "position": {
      "col": 8,
      "row": 5,
    },
  },
  {
    "fukumiDepth": null,
    "isFukumi": false,
    "position": {
      "col": 6,
      "row": 3,
    },
  },
]
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > checkCandidateForcedLoss: 'mise-vcf-#18' 1`] = `[]`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > checkCandidateForcedLoss: 'white29-m20' 1`] = `
[
  {
    "loss": null,
    "position": {
      "col": 9,
      "row": 6,
    },
  },
  {
    "loss": null,
    "position": {
      "col": 9,
      "row": 7,
    },
  },
  {
    "loss": null,
    "position": {
      "col": 10,
      "row": 7,
    },
  },
]
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > checkCandidateForcedLoss: 'white29-m24' 1`] = `
[
  {
    "loss": null,
    "position": {
      "col": 10,
      "row": 7,
    },
  },
  {
    "loss": {
      "sequence": [
        {
          "col": 10,
          "row": 11,
        },
        {
          "col": 8,
          "row": 9,
        },
        {
          "col": 10,
          "row": 8,
        },
      ],
      "type": "vcf",
    },
    "position": {
      "col": 8,
      "row": 5,
    },
  },
  {
    "loss": {
      "sequence": [
        {
          "col": 10,
          "row": 11,
        },
        {
          "col": 8,
          "row": 9,
        },
        {
          "col": 10,
          "row": 8,
        },
      ],
      "type": "vcf",
    },
    "position": {
      "col": 6,
      "row": 3,
    },
  },
]
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > counterThreatGuards: 'mise-vcf-#18' 1`] = `
{
  "hasFourThreeOpponent": false,
  "hasFourThreeSelf": false,
  "hasOpenThreeOpponent": false,
  "hasOpenThreeSelf": false,
}
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > counterThreatGuards: 'white29-m20' 1`] = `
{
  "hasFourThreeOpponent": false,
  "hasFourThreeSelf": false,
  "hasOpenThreeOpponent": false,
  "hasOpenThreeSelf": false,
}
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > counterThreatGuards: 'white29-m24' 1`] = `
{
  "hasFourThreeOpponent": true,
  "hasFourThreeSelf": true,
  "hasOpenThreeOpponent": false,
  "hasOpenThreeSelf": false,
}
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > detectOpponentThreats: 'mise-vcf-#18' 1`] = `
{
  "opponent": {
    "doubleThrees": [],
    "fours": [],
    "mises": [],
    "openFours": [],
    "openThrees": [],
  },
  "self": {
    "doubleThrees": [
      {
        "col": 8,
        "row": 11,
      },
    ],
    "fours": [],
    "mises": [],
    "openFours": [],
    "openThrees": [],
  },
}
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > detectOpponentThreats: 'white29-m20' 1`] = `
{
  "opponent": {
    "doubleThrees": [],
    "fours": [],
    "mises": [],
    "openFours": [],
    "openThrees": [],
  },
  "self": {
    "doubleThrees": [],
    "fours": [],
    "mises": [],
    "openFours": [],
    "openThrees": [],
  },
}
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > detectOpponentThreats: 'white29-m24' 1`] = `
{
  "opponent": {
    "doubleThrees": [],
    "fours": [],
    "mises": [
      {
        "col": 10,
        "row": 11,
      },
    ],
    "openFours": [],
    "openThrees": [],
  },
  "self": {
    "doubleThrees": [],
    "fours": [],
    "mises": [
      {
        "col": 10,
        "row": 7,
      },
    ],
    "openFours": [],
    "openThrees": [],
  },
}
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > findDoubleMiseMoves: 'mise-vcf-#18' 1`] = `
{
  "opponent": [],
  "self": [],
}
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > findDoubleMiseMoves: 'white29-m20' 1`] = `
{
  "opponent": [],
  "self": [],
}
`;

exports[`review 戦術プリミティブ出力スナップショット (#37 P3 安全網) > findDoubleMiseMoves: 'white29-m24' 1`] = `
{
  "opponent": [
    {
      "col": 5,
      "row": 7,
    },
  ],
  "self": [],
}
`;

exports[`review 戦術出力スナップショット (#37 P0) > checkForcedLoss: 'mise-vcf-#18' 1`] = `
{
  "sequence": [
    {
      "col": 6,
      "row": 9,
    },
    {
      "col": 8,
      "row": 11,
    },
    {
      "col": 4,
      "row": 7,
    },
    {
      "col": 3,
      "row": 6,
    },
    {
      "col": 4,
      "row": 9,
    },
    {
      "col": 3,
      "row": 10,
    },
    {
      "col": 4,
      "row": 8,
    },
  ],
  "type": "mise-vcf",
}
`;

exports[`review 戦術出力スナップショット (#37 P0) > checkForcedLoss: 'white29-m20' 1`] = `
{
  "sequence": [
    {
      "col": 9,
      "row": 6,
    },
    {
      "col": 9,
      "row": 5,
    },
    {
      "col": 9,
      "row": 7,
    },
    {
      "col": 9,
      "row": 10,
    },
    {
      "col": 10,
      "row": 7,
    },
    {
      "col": 11,
      "row": 7,
    },
    {
      "col": 8,
      "row": 5,
    },
  ],
  "type": "vct",
}
`;

exports[`review 戦術出力スナップショット (#37 P0) > checkForcedLoss: 'white29-m24' 1`] = `
{
  "sequence": [
    {
      "col": 10,
      "row": 7,
    },
    {
      "col": 11,
      "row": 7,
    },
    {
      "col": 8,
      "row": 5,
    },
  ],
  "type": "vcf",
}
`;

exports[`review 戦術出力スナップショット (#37 P0) > detectForcedWin: 'mise-vcf-#18' 1`] = `
{
  "doubleMiseBestMove": null,
  "doubleMiseMoves": [],
  "forcedWin": {
    "firstMove": {
      "col": 6,
      "row": 9,
    },
    "isForbiddenTrap": false,
    "sequence": [
      {
        "col": 6,
        "row": 9,
      },
      {
        "col": 8,
        "row": 11,
      },
      {
        "col": 4,
        "row": 7,
      },
      {
        "col": 3,
        "row": 6,
      },
      {
        "col": 4,
        "row": 9,
      },
      {
        "col": 3,
        "row": 10,
      },
      {
        "col": 4,
        "row": 8,
      },
    ],
    "tree": {
      "attackerMove": {
        "col": 6,
        "row": 9,
      },
      "defenses": [
        {
          "defenderMove": {
            "col": 4,
            "row": 7,
          },
          "next": {
            "attackerMove": {
              "col": 8,
              "row": 11,
            },
            "defenses": [
              {
                "defenderMove": {
                  "col": 9,
                  "row": 12,
                },
                "next": {
                  "attackerMove": {
                    "col": 10,
                    "row": 11,
                  },
                  "defenses": [],
                },
              },
            ],
          },
        },
        {
          "defenderMove": {
            "col": 8,
            "row": 11,
          },
          "next": {
            "attackerMove": {
              "col": 4,
              "row": 7,
            },
            "defenses": [
              {
                "defenderMove": {
                  "col": 3,
                  "row": 6,
                },
                "next": {
                  "attackerMove": {
                    "col": 4,
                    "row": 9,
                  },
                  "defenses": [
                    {
                      "defenderMove": {
                        "col": 3,
                        "row": 10,
                      },
                      "next": {
                        "attackerMove": {
                          "col": 4,
                          "row": 8,
                        },
                        "defenses": [],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      ],
    },
  },
  "forcedWinType": "mise-vcf",
}
`;

exports[`review 戦術出力スナップショット (#37 P0) > detectForcedWin: 'white29-m20' 1`] = `
{
  "doubleMiseBestMove": null,
  "doubleMiseMoves": [],
  "forcedWin": {
    "firstMove": {
      "col": 9,
      "row": 6,
    },
    "isForbiddenTrap": false,
    "sequence": [
      {
        "col": 9,
        "row": 6,
      },
      {
        "col": 9,
        "row": 5,
      },
      {
        "col": 9,
        "row": 7,
      },
      {
        "col": 9,
        "row": 10,
      },
      {
        "col": 10,
        "row": 7,
      },
      {
        "col": 11,
        "row": 7,
      },
      {
        "col": 8,
        "row": 5,
      },
    ],
    "tree": {
      "attackerMove": {
        "col": 9,
        "row": 6,
      },
      "defenses": [
        {
          "defenderMove": {
            "col": 9,
            "row": 5,
          },
          "next": {
            "attackerMove": {
              "col": 9,
              "row": 7,
            },
            "defenses": [
              {
                "defenderMove": {
                  "col": 9,
                  "row": 10,
                },
                "next": {
                  "attackerMove": {
                    "col": 10,
                    "row": 7,
                  },
                  "defenses": [
                    {
                      "defenderMove": {
                        "col": 11,
                        "row": 7,
                      },
                      "next": {
                        "attackerMove": {
                          "col": 8,
                          "row": 5,
                        },
                        "defenses": [],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
        {
          "defenderMove": {
            "col": 9,
            "row": 7,
          },
          "next": {
            "attackerMove": {
              "col": 6,
              "row": 3,
            },
            "defenses": [
              {
                "defenderMove": {
                  "col": 5,
                  "row": 2,
                },
                "next": {
                  "attackerMove": {
                    "col": 7,
                    "row": 3,
                  },
                  "defenses": [
                    {
                      "defenderMove": {
                        "col": 7,
                        "row": 5,
                      },
                      "next": {
                        "attackerMove": {
                          "col": 8,
                          "row": 3,
                        },
                        "defenses": [
                          {
                            "defenderMove": {
                              "col": 9,
                              "row": 2,
                            },
                            "next": {
                              "attackerMove": {
                                "col": 5,
                                "row": 3,
                              },
                              "defenses": [],
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
              {
                "defenderMove": {
                  "col": 8,
                  "row": 5,
                },
                "next": {
                  "attackerMove": {
                    "col": 7,
                    "row": 3,
                  },
                  "defenses": [
                    {
                      "defenderMove": {
                        "col": 7,
                        "row": 5,
                      },
                      "next": {
                        "attackerMove": {
                          "col": 8,
                          "row": 3,
                        },
                        "defenses": [
                          {
                            "defenderMove": {
                              "col": 9,
                              "row": 2,
                            },
                            "next": {
                              "attackerMove": {
                                "col": 5,
                                "row": 3,
                              },
                              "defenses": [],
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
              {
                "defenderMove": {
                  "col": 10,
                  "row": 7,
                },
                "next": {
                  "attackerMove": {
                    "col": 7,
                    "row": 3,
                  },
                  "defenses": [
                    {
                      "defenderMove": {
                        "col": 7,
                        "row": 5,
                      },
                      "next": {
                        "attackerMove": {
                          "col": 8,
                          "row": 3,
                        },
                        "defenses": [
                          {
                            "defenderMove": {
                              "col": 9,
                              "row": 2,
                            },
                            "next": {
                              "attackerMove": {
                                "col": 5,
                                "row": 3,
                              },
                              "defenses": [],
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
        {
          "defenderMove": {
            "col": 9,
            "row": 10,
          },
          "next": {
            "attackerMove": {
              "col": 9,
              "row": 7,
            },
            "defenses": [
              {
                "defenderMove": {
                  "col": 9,
                  "row": 5,
                },
                "next": {
                  "attackerMove": {
                    "col": 10,
                    "row": 7,
                  },
                  "defenses": [
                    {
                      "defenderMove": {
                        "col": 11,
                        "row": 7,
                      },
                      "next": {
                        "attackerMove": {
                          "col": 8,
                          "row": 5,
                        },
                        "defenses": [],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      ],
    },
  },
  "forcedWinType": "vct",
}
`;

exports[`review 戦術出力スナップショット (#37 P0) > detectForcedWin: 'white29-m24' 1`] = `
{
  "doubleMiseBestMove": null,
  "doubleMiseMoves": [],
  "forcedWin": {
    "firstMove": {
      "col": 10,
      "row": 7,
    },
    "isForbiddenTrap": false,
    "sequence": [
      {
        "col": 10,
        "row": 7,
      },
      {
        "col": 11,
        "row": 7,
      },
      {
        "col": 8,
        "row": 5,
      },
    ],
    "tree": undefined,
  },
  "forcedWinType": "vcf",
}
`;
